# django_powcaptcha_example

./: .gitignore  manage.py  pyproject.toml
core/: forms.py  urls.py  views.py
core/templates/core/: index.html
django_powcaptcha_example/: asgi.py  settings.py  urls.py  wsgi.py
